--- a/environment.yml
+++ b/environment.yml
@@ -28,10 +28,15 @@ dependencies:
   - aws-checksums=0.1.18=hecc5fa9_1
   - aws-crt-cpp=0.26.2=he2a05a2_5
   - aws-sdk-cpp=1.11.267=h5606698_1
+  - azure-core-cpp=1.10.3=h91d86a7_1
+  - azure-storage-blobs-cpp=12.10.0=h00ab1b0_0
+  - azure-storage-common-cpp=12.5.0=hb858b4b_2
   - babel=2.14.0=pyhd8ed1ab_0
   - beautifulsoup4=4.12.3=pyha770c72_0
   - bleach=6.1.0=pyhd8ed1ab_0
+  - blosc=1.21.5=h0f2a231_0
   - boltons=23.1.1=pyhd8ed1ab_0
+  - branca=0.7.1=pyhd8ed1ab_0
   - brotli=1.1.0=hd590300_1
   - brotli-bin=1.1.0=hd590300_1
   - brotli-python=1.1.0=py312h30efb56_1
@@ -43,7 +48,11 @@ dependencies:
   - cairo=1.18.0=h3faef2a_0
   - certifi=2024.2.2=pyhd8ed1ab_0
   - cffi=1.16.0=py312hf06ca03_0
+  - cfitsio=4.3.1=hbdc6101_0
   - charset-normalizer=3.3.2=pyhd8ed1ab_0
+  - click=8.1.7=unix_pyh707e725_0
+  - click-plugins=1.1.1=py_0
+  - cligj=0.7.2=pyhd8ed1ab_1
   - colorama=0.4.6=pyhd8ed1ab_0
   - comm=0.2.1=pyhd8ed1ab_0
   - conda-package-handling=2.2.0=pyh38be061_0
@@ -55,12 +64,14 @@ dependencies:
   - decorator=5.1.1=pyhd8ed1ab_0
   - defusedxml=0.7.1=pyhd8ed1ab_0
   - distro=1.9.0=pyhd8ed1ab_0
-  - dotenv
   - entrypoints=0.4=pyhd8ed1ab_0
+  - et_xmlfile=1.1.0=pyhd8ed1ab_0
   - exceptiongroup=1.2.0=pyhd8ed1ab_2
   - executing=2.0.1=pyhd8ed1ab_0
   - expat=2.5.0=hcb278e6_1
+  - fiona=1.9.5=py312h66d9856_3
   - fmt=10.2.1=h00ab1b0_0
+  - folium=0.16.0=pyhd8ed1ab_0
   - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
   - font-ttf-inconsolata=3.000=h77eed37_0
   - font-ttf-source-code-pro=2.038=h77eed37_0
@@ -71,8 +82,15 @@ dependencies:
   - fonttools=4.48.1=py312h98912ed_0
   - fqdn=1.5.1=pyhd8ed1ab_0
   - freetype=2.12.1=h267a509_2
+  - freexl=2.0.0=h743c826_0
+  - gdal=3.8.4=py312h257dd4b_0
+  - geopandas=0.14.3=pyhd8ed1ab_0
+  - geopandas-base=0.14.3=pyha770c72_0
+  - geos=3.12.1=h59595ed_0
+  - geotiff=1.7.1=h6b2125f_15
   - gettext=0.21.1=h27087fc_0
   - gflags=2.2.2=he1b5a44_1004
+  - giflib=5.2.1=h0b41bf4_3
   - glib=2.78.3=hfc55251_0
   - glib-tools=2.78.3=hfc55251_0
   - glog=0.6.0=h6f12383_0
@@ -82,6 +100,8 @@ dependencies:
   - h11=0.14.0=pyhd8ed1ab_0
   - h2=4.1.0=pyhd8ed1ab_0
   - harfbuzz=8.3.0=h3d44ed6_0
+  - hdf4=4.2.15=h2a13503_7
+  - hdf5=1.14.3=nompi_h4f84152_100
   - hpack=4.0.0=pyh9f0ad1d_0
   - httpcore=1.0.2=pyhd8ed1ab_0
   - httpx=0.26.0=pyhd8ed1ab_0
@@ -98,6 +118,7 @@ dependencies:
   - jedi=0.19.1=pyhd8ed1ab_0
   - jinja2=3.1.3=pyhd8ed1ab_0
   - joblib=1.3.2=pyhd8ed1ab_0
+  - json-c=0.17=h7ab15ed_0
   - json5=0.9.14=pyhd8ed1ab_0
   - jsonpatch=1.33=pyhd8ed1ab_0
   - jsonpointer=2.4=py312h7900ff3_3
@@ -116,6 +137,7 @@ dependencies:
   - jupyterlab_pygments=0.3.0=pyhd8ed1ab_1
   - jupyterlab_server=2.25.2=pyhd8ed1ab_0
   - jupyterlab_widgets=3.0.10=pyhd8ed1ab_0
+  - kealib=1.5.3=h2f55d51_0
   - keyutils=1.6.1=h166bdaf_0
   - kiwisolver=1.4.5=py312h8572e83_1
   - krb5=1.21.2=h659d440_0
@@ -124,6 +146,7 @@ dependencies:
   - ld_impl_linux-64=2.40=h41732ed_0
   - lerc=4.0.0=h27087fc_0
   - libabseil=20230802.1=cxx17_h59595ed_0
+  - libaec=1.1.2=h59595ed_1
   - libarchive=3.7.2=h2aa1ff5_1
   - libarrow=15.0.0=hdbe5c44_5_cpu
   - libarrow-acero=15.0.0=h59595ed_5_cpu
@@ -133,6 +156,7 @@ dependencies:
   - libarrow-gandiva=15.0.0=h308e607_5_cpu
   - libarrow-substrait=15.0.0=hfbc7f12_5_cpu
   - libblas=3.9.0=21_linux64_openblas
+  - libboost-headers=1.84.0=ha770c72_1
   - libbrotlicommon=1.1.0=hd590300_1
   - libbrotlidec=1.1.0=hd590300_1
   - libbrotlienc=1.1.0=hd590300_1
@@ -152,6 +176,7 @@ dependencies:
   - libflac=1.4.3=h59595ed_0
   - libgcc-ng=13.2.0=h807b86a_5
   - libgcrypt=1.10.3=hd590300_0
+  - libgdal=3.8.4=h9323651_0
   - libgfortran-ng=13.2.0=h69a702a_5
   - libgfortran5=13.2.0=ha4646dd_5
   - libglib=2.78.3=h783c2da_0
@@ -162,11 +187,13 @@ dependencies:
   - libgrpc=1.60.1=h74775cd_0
   - libiconv=1.17=hd590300_2
   - libjpeg-turbo=3.0.0=hd590300_1
+  - libkml=1.3.0=h01aab08_1018
   - liblapack=3.9.0=21_linux64_openblas
   - libllvm15=15.0.7=hb3ce162_4
   - libllvm16=16.0.6=hb3ce162_3
   - libmamba=1.5.6=had39da4_0
   - libmambapy=1.5.6=py312hd9e9ff6_0
+  - libnetcdf=4.9.2=nompi_h9612171_113
   - libnghttp2=1.58.0=h47da74e_1
   - libnl=3.9.0=hd590300_0
   - libnsl=2.0.1=hd590300_0
@@ -179,9 +206,12 @@ dependencies:
   - libpq=16.2=h33b98f1_0
   - libprotobuf=4.25.1=hf27288f_2
   - libre2-11=2023.06.02=h7a70373_0
+  - librttopo=1.1.0=h8917695_15
   - libsndfile=1.2.2=hc60ed4a_1
   - libsodium=1.0.18=h36c2ea0_1
   - libsolv=0.7.28=hfc55251_0
+  - libspatialindex=1.9.3=h9c3ff4c_4
+  - libspatialite=5.1.0=h7bd4643_4
   - libsqlite=3.45.1=h2797004_0
   - libssh2=1.11.0=h0841786_0
   - libstdcxx-ng=13.2.0=h7e041cc_5
@@ -196,14 +226,17 @@ dependencies:
   - libxcrypt=4.4.36=hd590300_1
   - libxkbcommon=1.6.0=hd429924_1
   - libxml2=2.12.5=h232c23b_0
+  - libzip=1.10.1=h2629f0a_3
   - libzlib=1.2.13=hd590300_5
   - lz4-c=1.9.4=hcb278e6_0
   - lzo=2.10=h516909a_1000
+  - mapclassify=2.6.1=pyhd8ed1ab_0
   - markupsafe=2.1.5=py312h98912ed_0
   - matplotlib=3.8.2=py312h7900ff3_0
   - matplotlib-base=3.8.2=py312he5832f3_0
   - matplotlib-inline=0.1.6=pyhd8ed1ab_0
   - menuinst=2.0.2=py312h7900ff3_0
+  - minizip=4.0.4=h0ab5242_0
   - mistune=3.0.2=pyhd8ed1ab_0
   - mpg123=1.32.4=h59595ed_0
   - munkres=1.1.4=pyh9f0ad1d_0
@@ -216,12 +249,14 @@ dependencies:
   - nbformat=5.9.2=pyhd8ed1ab_0
   - ncurses=6.4=h59595ed_2
   - nest-asyncio=1.6.0=pyhd8ed1ab_0
+  - networkx=3.2.1=pyhd8ed1ab_0
   - notebook=7.0.7=pyhd8ed1ab_0
   - notebook-shim=0.2.3=pyhd8ed1ab_0
   - nspr=4.35=h27087fc_0
   - nss=3.97=h1d7d5a4_0
   - numpy=1.26.4=py312heda63a1_0
   - openjpeg=2.5.0=h488ebb8_3
+  - openpyxl=3.1.2=py312h98912ed_1
   - openssl=3.2.1=hd590300_0
   - orc=1.9.2=h7829240_1
   - overrides=7.7.0=pyhd8ed1ab_0
@@ -241,6 +276,10 @@ dependencies:
   - platformdirs=4.2.0=pyhd8ed1ab_0
   - pluggy=1.4.0=pyhd8ed1ab_0
   - ply=3.11=py_1
+  - poppler=24.02.0=h590f24d_0
+  - poppler-data=0.4.12=hd8ed1ab_0
+  - postgresql=16.2=h7387d8b_0
+  - proj=9.3.1=h1d62c97_0
   - prometheus_client=0.19.0=pyhd8ed1ab_0
   - prompt-toolkit=3.0.42=pyha770c72_0
   - prompt_toolkit=3.0.42=hd8ed1ab_0
@@ -255,11 +294,13 @@ dependencies:
   - pycparser=2.21=pyhd8ed1ab_0
   - pygments=2.17.2=pyhd8ed1ab_0
   - pyparsing=3.1.1=pyhd8ed1ab_0
+  - pyproj=3.6.1=py312h38f1c37_5
   - pyqt=5.15.9=py312h949fe66_5
   - pyqt5-sip=12.12.2=py312h30efb56_5
   - pysocks=1.7.1=pyha2e5f31_6
   - python=3.12.1=hab00c5b_1_cpython
   - python-dateutil=2.8.2=pyhd8ed1ab_0
+  - python-dotenv=1.0.1=pyhd8ed1ab_0
   - python-fastjsonschema=2.19.1=pyhd8ed1ab_0
   - python-json-logger=2.0.7=pyhd8ed1ab_0
   - python-tzdata=2023.4=pyhd8ed1ab_0
@@ -280,6 +321,7 @@ dependencies:
   - rfc3339-validator=0.1.4=pyhd8ed1ab_0
   - rfc3986-validator=0.1.1=pyh9f0ad1d_0
   - rpds-py=0.17.1=py312h4b3b743_0
+  - rtree=1.2.0=py312hb0aae1a_0
   - ruamel.yaml=0.18.6=py312h98912ed_0
   - ruamel.yaml.clib=0.2.8=py312h98912ed_0
   - s2n=1.4.4=h06160fa_0
@@ -289,15 +331,18 @@ dependencies:
   - seaborn-base=0.13.2=pyhd8ed1ab_0
   - send2trash=1.8.2=pyh41d4057_0
   - setuptools=69.0.3=pyhd8ed1ab_0
+  - shapely=2.0.3=py312h9e6bd2c_0
   - sip=6.7.12=py312h30efb56_0
   - six=1.16.0=pyh6c4a22f_0
   - snappy=1.1.10=h9fff704_0
   - sniffio=1.3.0=pyhd8ed1ab_0
   - soupsieve=2.5=pyhd8ed1ab_1
+  - sqlite=3.45.1=h2c6b66d_0
   - stack_data=0.6.2=pyhd8ed1ab_0
   - statsmodels=0.14.1=py312hc7c0aa3_0
   - terminado=0.18.0=pyh0d859eb_0
   - threadpoolctl=3.2.0=pyha21a80b_0
+  - tiledb=2.20.1=hd75ad12_1
   - tinycss2=1.2.1=pyhd8ed1ab_0
   - tk=8.6.13=noxft_h4845f30_101
   - toml=0.10.2=pyhd8ed1ab_0
@@ -310,9 +355,11 @@ dependencies:
   - typing-extensions=4.9.0=hd8ed1ab_0
   - typing_extensions=4.9.0=pyha770c72_0
   - typing_utils=0.1.0=pyhd8ed1ab_0
+  - tzcode=2024a=h3f72095_0
   - tzdata=2024a=h0c530f3_0
   - ucx=1.15.0=h75e419f_3
   - uri-template=1.3.0=pyhd8ed1ab_0
+  - uriparser=0.9.7=h59595ed_1
   - urllib3=2.2.0=pyhd8ed1ab_0
   - wcwidth=0.2.13=pyhd8ed1ab_0
   - webcolors=1.13=pyhd8ed1ab_0
@@ -325,6 +372,7 @@ dependencies:
   - xcb-util-keysyms=0.4.0=h8ee46fc_1
   - xcb-util-renderutil=0.3.9=hd590300_1
   - xcb-util-wm=0.4.1=h8ee46fc_1
+  - xerces-c=3.2.5=hac6953d_0
   - xkeyboard-config=2.41=hd590300_0
   - xorg-kbproto=1.0.7=h7f98852_1002
   - xorg-libice=1.1.1=hd590300_0
@@ -338,6 +386,7 @@ dependencies:
   - xorg-xextproto=7.3.0=h0b41bf4_1003
   - xorg-xf86vidmodeproto=2.3.1=h7f98852_1002
   - xorg-xproto=7.0.31=h7f98852_1007
+  - xyzservices=2023.10.1=pyhd8ed1ab_0
   - xz=5.2.6=h166bdaf_0
   - yaml=0.2.5=h7f98852_2
   - yaml-cpp=0.8.0=h59595ed_0
